# hello-interpreter

./: .gitignore  CMakeLists.txt  README.md
clox/: README.md  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
clox/lox/: for2.lox  func.lox  if.lox  test.lox
jlox/: README.md
jlox/src/main/java/com/craftinginterpreters/lox/: AstPrinter.java  Interpreter.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Resolver.java  Scanner.java  TokenType.java
jlox/src/main/resources/basic/: class-this.lox  for.lox  for2.lox  while.lox
lox/: README.md  build.gradle
lox/gradle/wrapper/: gradle-wrapper.properties
lox/src/main/java/com/craftinginterpreters/lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Token.java  TokenType.java
lox/src/main/java/com/craftinginterpreters/tools/: GenerateAst.java
lox/src/main/resources/: class-inheritance.lox  class-instance.lox
lox/src/main/resources/basic/: func_closure.lox
lox/src/main/resources/performance/: fib.lox
